<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".InfoActivity" >

    
    <include
        android:id="@+id/inclue_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        layout="@layout/menu_bar" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:text="@string/info_username"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:layout_centerInParent="true"
        android:text="@string/info_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/inclue_bar"
        android:layout_below="@+id/tweet_number"
        android:text="@string/info_followers"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tweet_number"
        android:text="@string/info_following"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tweet_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:text="@string/info_tweet_number"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <View
        android:id="@+id/separator_1"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/name"
        android:layout_centerHorizontal="true"
        android:background="#000000" />

    <View
        android:id="@+id/separator2"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_alignLeft="@+id/followers"
        android:layout_below="@+id/followers"
        android:layout_marginTop="32dp"
        android:background="#000000" />

    <TextView
        android:id="@+id/tweet_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/inclue_bar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/separator2"
        android:paddingTop="12dp"
        android:text="@string/info_tweet_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
</RelativeLayout>