<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:focusable="false"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="@string/item_user"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#1C72FC" />

    <TextView
        android:id="@+id/timestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/user"
        android:layout_marginBottom="15dp"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="@string/item_timestamp"
        android:textColor="#ADADAD"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <TextView
        android:id="@+id/tweet_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/timestamp"
        android:paddingBottom="5dp"
        android:focusableInTouchMode="false"
		android:clickable="false"
		android:focusable="false"
        android:text="@string/item_tweet"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>